--- a/src/style/style.css
+++ b/src/style/style.css
@@ -312,18 +312,21 @@ p{
 /* Resume */
 
 .resume-area{
+	background-color: #09434d;
 	min-height: 100vh;
-	/*min-height: -webkit-fill-available;*/
+	//min-height: -webkit-fill-available;
 	padding-top: 30px;
 }
 .resume{}
 ::i-block-chrome,.resume {
 	min-height: 700px;
 }
-
+.resume .common-header {
+	color: white;
+}
 .resume-content {
 	background-color: white;
-	box-shadow: 0px 0px 15px #0000007d;
+	box-shadow: 0px 0px 15px white;
 	height: 470px;
 	border-radius: 15px;
 	overflow: hidden;
@@ -343,7 +346,7 @@ p{
 }
 .resume-ul-left li {
 	background-color: #09434d;
-	padding: 34px 0;
+	padding: 25px 0;
 	text-align: center;
 }
 .resume-ul-left li i {
@@ -420,6 +423,73 @@ p{
 	color: #000 !important;
 	background-color: #09434d !important;
 	height: 8px;
+}
+/*Project css start*/
+.demo-project-img {
+	position: relative;
+	height: 100%;
+	overflow: hidden;
+}
+.demo-project-img::before {
+	position: absolute;
+	content: "";
+	width: 100%;
+	background-color: black;
+	height: 100%;
+	opacity: 0.4;
+	transition: 0.6s;
+}
+.demo-project-img img {
+	width: 100%;
+	transition: 0.6s;
+}
+.demo-projects {}
+.demo-project {
+	position: relative;
+	height: 100%;
+    background: white;
+	overflow: hidden;
+}
+.demo-project-desc {
+	position: absolute;
+	content: "";
+	color: white;
+	top: 0;
+	left: 0;
+	text-align: center;
+	transition: 0.6s;
+	width: 100%;
+	height: 100%;
+	padding-top: 50%;
+	padding-left: 5px;
+	padding-right: 5px;
+	overflow: hidden;
+}
+.demo-project-desc h2 {
+	font-size: 24px;
+	font-weight: 700;
+}
+.demo-project-desc  p {
+	visibility: hidden;
+}
+.demo-project-desc a {
+	visibility: hidden;
+	margin-top: 15px;
+}
+.demo-project-desc  a:hover {
+	text-decoration: none;
+	color: white;
+	background-color: #09434d;
+}
+
+.demo-project-desc:hover {
+	padding-top: 15%;
+}
+.demo-project-desc:hover.demo-project-desc  p {
+	visibility: visible;
+}
+.demo-project-desc:hover.demo-project-desc  a {
+	visibility: visible;
 }
 
 /* Contact */
